# libfqfft

libfqfft/evaluation_domain/: evaluation_domain.hpp
libfqfft/evaluation_domain/domains/: basic_radix2_domain.tcc  extended_radix2_domain.tcc  step_radix2_domain.tcc
tutorials/: CMakeLists.txt
